# Weather_Station_2

./: .clang-format  .gitignore  .gitmodules  CACerts.cpp  CACerts.h  CLAUDE.md  CMakeLists.txt  Containerfile  CurrentConditions.cpp  CurrentConditions.h  DisplayLocations.cpp  DisplayLocations.h  Kitties.cpp  Kitties.h  KittyPics.cpp  KittyPics.h  Network.cpp  Network.h  Weather_Station_2.cpp  Weather_Station_2.ino  build.sh  config.cmake.example  layout.json  weather_gov.pem
.claude/: settings.local.json
Fonts/: Roboto_Light_36.h  Roboto_Medium_150.h
assets/certificates/: weather_gov.pem
assets/fonts/: Roboto_Light.h  Roboto_Medium.h
cmake/: BoardOptions.cmake  Layout.cmake  Version.cmake  inkplate10-board.txt
docs/: CLAUDE.md  README.md
docs/superpowers/plans/: 2026-03-22-fix-pr5-cert-error.md  2026-03-26-cmake-migration.md  2026-04-15-config-extraction.md  2026-04-16-containerized-build.md  2026-05-29-battery-meter.md  2026-07-12-drop-arduino-cmake-toolchain.md
docs/superpowers/specs/: 2026-03-24-cmake-migration-design.md  2026-04-13-ota-firmware-update-design.md  2026-04-15-config-extraction-design.md  2026-04-17-tdd-infrastructure-design.md  2026-05-29-battery-meter-design.md  2026-07-12-drop-arduino-cmake-toolchain-design.md
src/: config.h.in  layout.h.in  user_settings.h.in  version.h.in
src/display/: BatteryMeter.cpp  BatteryMeter.h  DisplayLocations.h  IBatteryReader.h  InkplateBatteryReader.cpp  InkplateBatteryReader.h  Kitties.cpp  Kitties.h  KittyPics.cpp
src/network/: BatteryLogger.cpp  BatteryLogger.h  CurrentConditions.cpp  CurrentConditions.h  IClock.h  IHttpClient.h  Network.cpp  Network.h  SystemClock.h
src/security/: CACerts.cpp  CACerts.h
tests/: CMakeLists.txt
tests/GrayscaleCalibration/: CMakeLists.txt
tests/build-script/: test_build_script.sh
tests/calibration/: CMakeLists.txt  GrayscaleCalibration.cpp  GrayscaleCalibration.ino
tests/device/: CMakeLists.txt
tests/device/DeviceUnitTests/: CMakeLists.txt  DeviceUnitTests.ino
tests/device/DeviceUnitTests/src/display/: Kitties.cpp  Kitties.h  KittyPics.cpp  KittyPics.h
tests/device/DeviceUnitTests/src/network/: CurrentConditions.cpp  CurrentConditions.h  IClock.h  IHttpClient.h  Network.cpp  Network.h
tests/device/DeviceUnitTests/src/security/: CACerts.cpp  CACerts.h
tests/device/unit/: CMakeLists.txt  DeviceUnitTests.cpp
tests/unit/: BatteryMeterTest.cpp  CACertsTest.cpp  CMakeLists.txt  CurrentConditionsTest.cpp  placeholder.cpp
tools/: cert_collector.py  extract_shade_luminance.py  image_converter.py  validate_battery_log.py
tools/layout-editor/: index.html
